deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blazeserve
  namespace: default
  labels:
    app.kubernetes.io/name: blazeserve
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
  selector:
    app.kubernetes.io/name: blazeserve
